Substituicao do Base64Encode e Base64Decode da Sun pela Base64 do apache-commons